<resources>
    <string name="app_name">Calculator</string>
    <string name="title_calculadora">Calculadora</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">X</string>
    <string name="div">/</string>
    <string name="result">Result:</string>
    <string name="error_div">Não existe divisão por 0</string>
</resources>
