<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/title_calculadora"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintHorizontal_bias="0.502"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/number1EditText"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            android:hint="@string/first_number"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/number2EditText"
            app:layout_constraintStart_toStartOf="@+id/number1EditText"
            app:layout_constraintEnd_toEndOf="@+id/number1EditText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number1EditText"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/second_number"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number2EditText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:id="@+id/linearLayout">
        <Button
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button" android:layout_weight="1"
                android:onClick="buttonAdd"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:onClick="buttonMinus"
                android:textColor="#795548"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:text="@string/times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:onClick="buttonMulti"
                style="?android:attr/buttonBarButtonStyle" />
        <Button
                android:text="@string/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button4" android:layout_weight="1"
                android:onClick="buttonDiv"
                style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <TextView
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
</android.support.constraint.ConstraintLayout>